change to extension

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "optimise-nct-util",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Optimise Nhac Cua Tui Player Performance",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "zip -r packed.zip icos background.html background.js content.js manifest.json"
   },
   "repository": {
     "type": "git",
